# micattix

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: core.rs  game.rs  lib.rs  ui.rs
tests/: integration_tests.rs
